# c3c

./: CMakeLists.txt  releasenotes.md
.github/workflows/: main.yml  temp.yml
benchmarks/stdlib/threads/: fixed_pool.c3
dependencies/lzma/: CMakeLists.txt
dependencies/lzma/src/: config.h
lib/std/compression/: zip.c3
lib/std/core/: builtin.c3  string.c3
lib/std/experimental/: FrameScheduler.c3
lib/std/libc/os/: android.c3  posix.c3
lib/std/os/: process.c3
lib/std/os/linux/: linux.c3
lib/std/os/posix/: threads.c3
lib/std/threads/: fixed_pool.c3  pool.c3  thread.c3
lib/std/threads/os/: thread_posix.c3
resources/: docs.html
resources/examples/schedulers/: FrameScheduler_example.c3  fixedpool_stress_test.c3
scripts/tools/: ci_tests.sh
src/: main.c
src/compiler/: compiler.c  compiler_internal.h  copying.c  enums.h  json_output.c  linker.c  llvm_codegen.c  mac_support.c  parse_expr.c  parse_global.c  sema_decls.c  sema_expr.c  sema_stmts.c  subprocess.c
src/utils/: common.h  cpus.c  dirent_compat.h  fetch_macossdk.c  fetch_msvc.c  file_utils.c  find_msvc.c  http.c  lib.h  ui.c  vmem.c  whereami.c  win32_compat.h
test/src/: test_suite_runner.c3
test/unit/stdlib/threads/: simple_thread.c3
wrapper/include/: c3_llvm.h
wrapper/src/: wrapper.cpp
